syntax = 'proto3';

package protobuf;

option go_package = ".;protobuf";

service RequestAnalysis {
    rpc SendHASMinAnalysis (HASInfo) returns (ResponseHAS) {}
    rpc SendHASMaxAnalysis (HASInfo) returns (ResponseHAS) {}
    rpc SendLBAnalysis (LBInfo) returns (ResponseLB) {}
    rpc SendSchedAnalysis (SchedInfo) returns (ResponseSched) {}
}

message HASInfo {
    string HPAName = 1;
    string HPANamespace = 2;
    string ClusterName = 3;
}
message ResponseHAS {
    string TargetCluster = 1;
}

message LBInfo {
    repeated string ClusterNameList = 1;
    string ClientIP = 2;
}

message ResponseLB {
    map<string,double> ScoreMap = 1;
}

message SchedInfo {
    string NodeName = 1;
}

message ResponseSched {
    string RX = 1;
    string TX = 2;
}