syntax = "proto3";

package schedulergrpc;

service NodeInfos {
    rpc GetNodeInfos (RequestedNode) returns (NetworkInfos) {}
}

message RequestedNode{
    string name = 1;
}

message NetworkInfos {
    float CurrentRXBytes = 1;
    float CurrentTXBytes = 2;
}